WebCore/loader/DocumentThreadableLoader.cpp
@@ -75,7 +75,7 @@ DocumentThreadableLoader::DocumentThreadableLoader(Document* document, Threadabl
     }
 
     if (m_options.crossOriginRequestPolicy == DenyCrossOriginRequests) {
-        m_client->didFail(ResourceError());
+        m_client->didFail(ResourceError(errorDomainWebKit, 0, request.url().string(), "Cross origin requests are not supported."));
         return;
     }
     
@@ -103,7 +103,7 @@ void DocumentThreadableLoader::makeSimpleCrossOriginAccessRequest(const Resource
 
     // Cross-origin requests are only defined for HTTP. We would catch this when checking response headers later, but there is no reason to send a request that's guaranteed to be denied.
     if (!request.url().protocolInHTTPFamily()) {
-        m_client->didFail(ResourceError());
+        m_client->didFail(ResourceError(errorDomainWebKit, 0, request.url().string(), "Cross origin requests are only supported for HTTP."));
         return;
     }
 
@@ -186,25 +186,26 @@ void DocumentThreadableLoader::didReceiveResponse(SubresourceLoader* loader, con
     ASSERT(m_client);
     ASSERT_UNUSED(loader, loader == m_loader);
 
+    String accessControlErrorDescription;
     if (m_actualRequest) {
-        if (!passesAccessControlCheck(response, m_options.allowCredentials, m_document->securityOrigin())) {
-            preflightFailure();
+        if (!passesAccessControlCheck(response, m_options.allowCredentials, m_document->securityOrigin(), accessControlErrorDescription)) {
+            preflightFailure(response.url(), accessControlErrorDescription);
             return;
         }
 
         OwnPtr<CrossOriginPreflightResultCacheItem> preflightResult(new CrossOriginPreflightResultCacheItem(m_options.allowCredentials));
-        if (!preflightResult->parse(response)
-            || !preflightResult->allowsCrossOriginMethod(m_actualRequest->httpMethod())
-            || !preflightResult->allowsCrossOriginHeaders(m_actualRequest->httpHeaderFields())) {
-            preflightFailure();
+        if (!preflightResult->parse(response, accessControlErrorDescription)
+            || !preflightResult->allowsCrossOriginMethod(m_actualRequest->httpMethod(), accessControlErrorDescription)
+            || !preflightResult->allowsCrossOriginHeaders(m_actualRequest->httpHeaderFields(), accessControlErrorDescription)) {
+            preflightFailure(response.url(), accessControlErrorDescription);
             return;
         }
 
         CrossOriginPreflightResultCache::shared().appendEntry(m_document->securityOrigin()->toString(), m_actualRequest->url(), preflightResult.release());
     } else {
         if (!m_sameOriginRequest && m_options.crossOriginRequestPolicy == UseAccessControl) {
-            if (!passesAccessControlCheck(response, m_options.allowCredentials, m_document->securityOrigin())) {
-                m_client->didFail(ResourceError());
+            if (!passesAccessControlCheck(response, m_options.allowCredentials, m_document->securityOrigin(), accessControlErrorDescription)) {
+                m_client->didFail(ResourceError(errorDomainWebKit, 0, response.url().string(), accessControlErrorDescription));
                 return;
             }
         }
@@ -290,10 +291,10 @@ void DocumentThreadableLoader::preflightSuccess()
     loadRequest(*actualRequest, SkipSecurityCheck);
 }
 
-void DocumentThreadableLoader::preflightFailure()
+void DocumentThreadableLoader::preflightFailure(const String& url, const String& errorDescription)
 {
     m_actualRequest = 0; // Prevent didFinishLoading() from bypassing access check.
-    m_client->didFail(ResourceError());
+    m_client->didFail(ResourceError(errorDomainWebKit, 0, url, errorDescription));
 }
 
 void DocumentThreadableLoader::loadRequest(const ResourceRequest& request, SecurityCheckPolicy securityCheck)
