WebCore/loader/DocumentThreadableLoader.h
@@ -43,6 +43,7 @@ namespace WebCore {
     class Document;
     class KURL;
     class ResourceRequest;
+    class String;
     class ThreadableLoaderClient;
 
     class DocumentThreadableLoader : public RefCounted<DocumentThreadableLoader>, public ThreadableLoader, private SubresourceLoaderClient  {
@@ -84,7 +85,7 @@ namespace WebCore {
         void makeSimpleCrossOriginAccessRequest(const ResourceRequest& request);
         void makeCrossOriginAccessRequestWithPreflight(const ResourceRequest& request);
         void preflightSuccess();
-        void preflightFailure();
+        void preflightFailure(const String& url, const String& errorDescription);
 
         void loadRequest(const ResourceRequest&, SecurityCheckPolicy);
         bool isAllowedRedirect(const KURL&);
